Reformat _ to - for consistency

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
             <div class="solid-blue">
                 <img src="./assets/images/play_by_sight.jpg"
                     alt="a young girl and her grandmother circling their eyes with their hands like glasses"
-                    class="square_image play_by_pic">
+                    class="square-image play-by-pic">
                 <p class="right-align">
                     The most commonly stimulated sense for young children is sight. From birth, babies are given
                     brightly
@@ -84,7 +84,7 @@
             <div class="solid-pink">
                 <img src="./assets/images/play_by_sound.jpg"
                     alt="a young girl holding up a home made tin and string phone to her ear"
-                    class="square_image play_by_pic">
+                    class="square-image play-by-pic">
                 <p class="left-align">
 
 
@@ -101,7 +101,7 @@
             <h3 id="smell">Smell <i class="fas fa-bacon" aria-hidden="true"></i></h3>
             <div class="solid-grey">
                 <img src="./assets/images/play_by_smell.jpg" alt="a young girl smelling a flower"
-                    class="square_image play_by_pic">
+                    class="square-image play-by-pic">
                 <p class="right-align">
 
 
@@ -115,7 +115,7 @@
             <h3 id="touch">Touch <i class="fas fa-hand-sparkles" aria-hidden="true"></i></h3>
             <div class="solid-green">
                 <img src="./assets/images/play_by_touch.jpg" alt="a young girl playing with a bead and metal toy"
-                    class="square_image play_by_pic">
+                    class="square-image play-by-pic">
                 <p class="left-align">
 
 
@@ -129,7 +129,7 @@
             <h3 id="taste">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
             <div class="solid-peach">
                 <img src="./assets/images/play_with_mum.jpg"
-                    alt="a young mum and her daughter sorting through drinking cups" class="square_image play_by_pic">
+                    alt="a young mum and her daughter sorting through drinking cups" class="square-image play-by-pic">
                 <p class="right-align">
                     Through the sense of taste children will get to explore new foods, fruits and vegetables and decide
                     which ones they like and do not like. Finger foods are a good way to encourage independence for
@@ -170,17 +170,17 @@
                 </p>
             </div>
             <h3 class="sections-headers">Top 10 Activities</h3>
-            <div id="top10_pane">
+            <div id="top10-pane">
                 <img src="assets/images/play_dough.jpg" alt="a young boy holding play dough in his hands"
-                    class=" square_image" id="play_dough_img">
+                    class=" square-image" id="play-dough-img">
 
                 <img src="assets/images/water_play.jpg" alt="a young boy holding up a hose pipe and spraying water"
-                    class=" square_image" id="water_img">
+                    class=" square-image" id="water-img">
 
                 <img src="assets/images/mud_play.jpg" alt="multiple hands playing in a pile of mud and covered in mud"
-                    class="square_image" id="mud_img">
+                    class="square-image" id="mud-img">
 
-                <div class="solid-blue activities_style">
+                <div class="solid-blue activities-style">
                     <p>
                         <em>Activity One: Making and Painting Homemade Salt Dough</em>
                         <br>
@@ -190,7 +190,7 @@
                         creations in the oven and once they are hardened, let the little ones paint them.
                     </p>
                 </div>
-                <div class="solid-pink activities_style">
+                <div class="solid-pink activities-style">
                     <p>
                         <em>Activity Two: Play Dough</em>
                         <br>
@@ -200,7 +200,7 @@
                         toddlers will enjoy hours of soft dough fun!
                     </p>
                 </div>
-                <div class="solid-grey activities_style">
+                <div class="solid-grey activities-style">
                     <p>
                         <em>Activity Three: Kinetic Sand</em>
                         <br>
@@ -209,7 +209,7 @@
                         squeezable sand that you just can’t put down!
                     </p>
                 </div>
-                <div class="solid-green activities_style">
+                <div class="solid-green activities-style">
                     <p>
                         <em>Activity Four: Shadow Puppets</em>
                         <br>
@@ -218,7 +218,7 @@
                         storytelling!
                     </p>
                 </div>
-                <div class="solid-peach activities_style">
+                <div class="solid-peach activities-style">
                     <p>
                         <em>Activity Five: Water Play</em>
                         <br>
@@ -227,7 +227,7 @@
                         children become absorbed with the ripples of the water – try out a variety of water play games!
                     </p>
                 </div>
-                <div class="solid-blue activities_style">
+                <div class="solid-blue activities-style">
                     <p>
                         <em>Activity Six: Porridge Oats Construction</em>
                         <br>
@@ -238,7 +238,7 @@
                         have a blast.
                     </p>
                 </div>
-                <div class="solid-pink activities_style">
+                <div class="solid-pink activities-style">
                     <p>
                         <em>Activity Seven: Couscous Dinosaur Hunt</em>
                         <br>
@@ -248,7 +248,7 @@
                         brushes in an exciting Fossil Hunt.
                     </p>
                 </div>
-                <div class="solid-grey activities_style">
+                <div class="solid-grey activities-style">
                     <p>
                         <em>Activity Eight: Make Pretend Snow</em>
                         <br>
@@ -258,7 +258,7 @@
                         mix together 8 cups of cornflour and 1 cup of vegetable oil.
                     </p>
                 </div>
-                <div class="solid-green activities_style">
+                <div class="solid-green activities-style">
                     <p>
                         <em>Activity Nine: Homemade Paint Bags</em>
                         <br>
@@ -269,7 +269,7 @@
                         colours – without the mess!
                     </p>
                 </div>
-                <div class="solid-peach activities_style">
+                <div class="solid-peach activities-style">
                     <p>
                         <em>Activity Ten: Mud Pies</em>
                         <br>
@@ -285,7 +285,7 @@
         <section>
             <h2 id="sec4" class="sections-headers">Help with Anxiety</h2>
             <img src="assets/images/child_anxiety.jpg"
-                alt="a little girl in a red dress reflection of herself shows her in dark colours" id="anxiety_img">
+                alt="a little girl in a red dress reflection of herself shows her in dark colours" id="anxiety-img">
             <br>
             <br>
             <div class="solid-orange">
@@ -310,9 +310,9 @@
             </div>
             <h3 class="sections-headers">6 Mindful and Sensory Activities to Help Kids Regulate Emotions and Re-Centre
             </h3>
-            <div id="anxiety_pane">
-                <figure class="grid_figure">
-                    <img src="assets/images/scavenger_hunt.jpg" alt="a scavenger hunt map" class="anxiety_activity">
+            <div id="anxiety-pane">
+                <figure class="grid-figure">
+                    <img src="assets/images/scavenger_hunt.jpg" alt="a scavenger hunt map" class="anxiety-activity">
                     <figcaption>
                         <div class="tooltip">1. Sensory Scavenger Hunt.<span class="tooltiptext">A sensory scavenger
                                 hunt
@@ -321,8 +321,8 @@
                                 taste.</span></div>
                     </figcaption>
                 </figure>
-                <figure class="grid_figure"><img src="assets/images/slime.jpg"
-                        alt="a greyscale hand squeezing orange slime" class="anxiety_activity">
+                <figure class="grid-figure"><img src="assets/images/slime.jpg"
+                        alt="a greyscale hand squeezing orange slime" class="anxiety-activity">
                     <figcaption>
                         <div class="tooltip">2. Aromatherapy Slime.<span class="tooltiptext">Tactile activities are a
                                 great
@@ -331,8 +331,8 @@
                                 a bonus of calming aromatherapy oil.</span></div>
                     </figcaption>
                 </figure>
-                <figure class="grid_figure"><img src="assets/images/play_water.jpg"
-                        alt="a little boy splashing through water" class="anxiety_activity">
+                <figure class="grid-figure"><img src="assets/images/play_water.jpg"
+                        alt="a little boy splashing through water" class="anxiety-activity">
                     <figcaption>
                         <div class="tooltip">3. Play in Water.<span class="tooltiptext">There is something about kids
                                 and
@@ -344,8 +344,8 @@
                         </div>
                     </figcaption>
                 </figure>
-                <figure class="grid_figure"><img src="assets/images/garden.jpg" alt="a little boy watering his garden"
-                        class="anxiety_activity">
+                <figure class="grid-figure"><img src="assets/images/garden.jpg" alt="a little boy watering his garden"
+                        class="anxiety-activity">
                     <figcaption>
                         <div class="tooltip">4. Make a Sensory Garden.<span class="tooltiptext">Gardening is known to
                                 provide a psychological boost by reducing stress and increasing positive emotions. One
@@ -354,9 +354,9 @@
                                 flow. Some research even shows that digging in dirt increases serotonin levels in the
                                 brain.</span></div>
                     </figcaption>
-                </figure class="grid_figure">
-                <figure class="grid_figure"><img src="assets/images/glitter_jar.jpg"
-                        alt="a jar of gold glitter spilling onto the floor" class="anxiety_activity">
+                </figure class="grid-figure">
+                <figure class="grid-figure"><img src="assets/images/glitter_jar.jpg"
+                        alt="a jar of gold glitter spilling onto the floor" class="anxiety-activity">
                     <figcaption>
                         <div class="tooltip">5. Make a Sensory Glitter Jar.<span class="tooltiptext">These jars are
                                 naturally
@@ -366,8 +366,8 @@
                                 take deep breaths. As the glitter settles in the jar, so do their feelings.</span></div>
                     </figcaption>
                 </figure>
-                <figure class="grid_figure"><img src="assets/images/colouring.jpg"
-                        alt="a box of colouring crayons with a blurred background" class="anxiety_activity">
+                <figure class="grid-figure"><img src="assets/images/colouring.jpg"
+                        alt="a box of colouring crayons with a blurred background" class="anxiety-activity">
                     <figcaption>
                         <div class="tooltip">6. Do some mindful colouring.<span class="tooltiptext">Coloring is an
                                 activity
