Add media query for about pag up to 770px max

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         </section>
         <section>
             <h2 id="sec1" class="sections-headers">What is Sensory Play?</h2>
-            <div class="solid-orange">
+            <div class="solid-orange solid-background">
                 <p>
                     Sensory play includes activities that stimulate children’s senses such as sight, sound, smell, taste
                     or
@@ -64,7 +64,7 @@
                 </p>
             </div>
             <h3 id="sight">Sight <i class="far fa-eye" aria-hidden="true"></i> </h3>
-            <div class="solid-blue">
+            <div class="solid-blue solid-background">
                 <img src="./assets/images/play_by_sight.jpg"
                     alt="a young girl and her grandmother circling their eyes with their hands like glasses"
                     class="square-image play-by-pic">
@@ -81,7 +81,7 @@
                     memory as to how things work.</p>
             </div>
             <h3 id="sound">Sound <i class="fas fa-assistive-listening-systems" aria-hidden="true"></i></h3>
-            <div class="solid-pink">
+            <div class="solid-pink solid-background">
                 <img src="./assets/images/play_by_sound.jpg"
                     alt="a young girl holding up a home made tin and string phone to her ear"
                     class="square-image play-by-pic">
@@ -99,7 +99,7 @@
                     and development.</p>
             </div>
             <h3 id="smell">Smell <i class="fas fa-bacon" aria-hidden="true"></i></h3>
-            <div class="solid-grey">
+            <div class="solid-grey solid-background">
                 <img src="./assets/images/play_by_smell.jpg" alt="a young girl smelling a flower"
                     class="square-image play-by-pic">
                 <p class="right-align">
@@ -113,7 +113,7 @@
                     new scents and build on their learning through their sense of smell.</p>
             </div>
             <h3 id="touch">Touch <i class="fas fa-hand-sparkles" aria-hidden="true"></i></h3>
-            <div class="solid-green">
+            <div class="solid-green solid-background">
                 <img src="./assets/images/play_by_touch.jpg" alt="a young girl playing with a bead and metal toy"
                     class="square-image play-by-pic">
                 <p class="left-align">
@@ -127,7 +127,7 @@
                     for texture such as rough and smooth, wet puddles, tree bark and some plants.</p>
             </div>
             <h3 id="taste">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
-            <div class="solid-peach">
+            <div class="solid-peach solid-background">
                 <img src="./assets/images/play_with_mum.jpg"
                     alt="a young mum and her daughter sorting through drinking cups" class="square-image play-by-pic">
                 <p class="right-align">
@@ -142,7 +142,7 @@
         </section>
         <section>
             <h2 id="sec2" class="sections-headers">Play in Motion</h2>
-            <div class="solid-orange">
+            <div class="solid-orange solid-background">
                 <p>
                     Watch this simple video about sensory play including
                     fun activities.
@@ -155,7 +155,7 @@
         </section>
         <section>
             <h2 id="sec3" class="sections-headers">Activities</h2>
-            <div class="solid-orange">
+            <div class="solid-orange solid-background">
                 <p>
                     Let’s have some messy fun!
 
@@ -288,7 +288,7 @@
                 alt="a little girl in a red dress reflection of herself shows her in dark colours" id="anxiety-img">
             <br>
             <br>
-            <div class="solid-orange">
+            <div class="solid-orange solid-background">
                 <p>
                     Anxiety in children can look like many things. It can look like anger, sadness, grumpiness,
                     self-doubt,
