Check code and make corrections

--- a/about.html
+++ b/about.html
@@ -15,32 +15,29 @@
 
 <body>
     <header id="header">
-        <h1 id="logo"><a href="index.html" href="javascript:void(0)">Play Eternal <i class="fas fa-hand-holding-heart"
-                    aria-hidden="true"></i></a>
+        <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart" aria-hidden="true"></i></a>
         </h1>
         <nav id="menu">
             <ul>
-                <li><a href="index.html" href="javascript:void(0)">Home</a></li>
-                <li class="dropdown"><a href="about.html" href="javascript:void(0)" class="dropbtn active">All About
+                <li><a href="index.html">Home</a></li>
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn active">All About
                         Sensory Play</a>
                     <div class="dropdown-content">
-                        <a href="about.html#sec1" href="javascript:void(0)">What is Sensory Play?</a>
-                        <a href="about.html#sec2" href="javascript:void(0)">Play in Motion</a>
-                        <a href="about.html#sec3" href="javascript:void(0)">Activities</a>
-                        <a href="about.html#sec4" href="javascript:void(0)">Help with Anxiety</a>
+                        <a href="about.html#sec1">What is Sensory Play?</a>
+                        <a href="about.html#sec2">Play in Motion</a>
+                        <a href="about.html#sec3">Activities</a>
+                        <a href="about.html#sec4">Help with Anxiety</a>
                     </div>
-
                 </li>
-                <li><a href="feedback.html" href="javascript:void(0)">Hear From Each Other</a></li>
-                <li><a href="contact.html" href="javascript:void(0)">Contact Us</a></li>
+                <li><a href="feedback.html">Hear From Each Other</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-
     </header>
-    <div class="content">
+    <div id="content">
         <section>
             <div id="about-menu">
-                <h1 id="top">All About Sensory Play</h1>
+                <h2>All About Sensory Play</h2>
                 <nav id="sub-menu">
                     <ul>
                         <li><a href="#sec1">What is Sensory Play?</a></li>
@@ -63,7 +60,7 @@
                     neurons in the brain to make connections, and help with development in all areas of learning.
                 </p>
             </div>
-            <h3 id="sight">Sight <i class="far fa-eye" aria-hidden="true"></i> </h3>
+            <h3 id="sight" class="senses_info">Sight <i class="far fa-eye" aria-hidden="true"></i> </h3>
             <div class="solid-blue solid-background">
                 <img src="./assets/images/play_by_sight.jpg"
                     alt="a young girl and her grandmother circling their eyes with their hands like glasses"
@@ -72,7 +69,6 @@
                     The most commonly stimulated sense for young children is sight. From birth, babies are given
                     brightly
                     coloured and patterned toys to look at and play with.
-
                     Exposing young children to new and interesting experiences will keep them curious about the world
                     around
                     them. Visually stimulating activities will enable children to use the sense of sight to discover
@@ -80,14 +76,12 @@
                     visual
                     memory as to how things work.</p>
             </div>
-            <h3 id="sound">Sound <i class="fas fa-assistive-listening-systems" aria-hidden="true"></i></h3>
+            <h3 id="sound" class="senses_info">Sound <i class="fas fa-assistive-listening-systems" aria-hidden="true"></i></h3>
             <div class="solid-pink solid-background">
                 <img src="./assets/images/play_by_sound.jpg"
                     alt="a young girl holding up a home made tin and string phone to her ear"
                     class="square-image play-by-pic">
                 <p class="left-align">
-
-
                     Many toys for young children feature music and other various sounds. Music is extremely important
                     for
                     children and many learn best when a concept is set to music. Music can encourage motor skills
@@ -98,13 +92,11 @@
                     learning
                     and development.</p>
             </div>
-            <h3 id="smell">Smell <i class="fas fa-bacon" aria-hidden="true"></i></h3>
+            <h3 id="smell" class="senses_info">Smell <i class="fas fa-bacon" aria-hidden="true"></i></h3>
             <div class="solid-grey solid-background">
                 <img src="./assets/images/play_by_smell.jpg" alt="a young girl smelling a flower"
                     class="square-image play-by-pic">
                 <p class="right-align">
-
-
                     The sense of smell helps children to identify scents they like or don’t like and can be incorporated
                     into planning in many ways. Try adding an array of fragrances into your treasure box, such as
                     coffee,
@@ -112,13 +104,11 @@
                     between
                     new scents and build on their learning through their sense of smell.</p>
             </div>
-            <h3 id="touch">Touch <i class="fas fa-hand-sparkles" aria-hidden="true"></i></h3>
+            <h3 id="touch" class="senses_info">Touch <i class="fas fa-hand-sparkles" aria-hidden="true"></i></h3>
             <div class="solid-green solid-background">
                 <img src="./assets/images/play_by_touch.jpg" alt="a young girl playing with a bead and metal toy"
                     class="square-image play-by-pic">
                 <p class="left-align">
-
-
                     The sense of touch can be best explored through textures and messy play. Young babies like to
                     snuggle in
                     with soft blankets and investigate treasure baskets, older babies and toddlers will enjoy messy play
@@ -126,7 +116,7 @@
                     items
                     for texture such as rough and smooth, wet puddles, tree bark and some plants.</p>
             </div>
-            <h3 id="taste">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
+            <h3 id="taste" class="senses_info">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
             <div class="solid-peach solid-background">
                 <img src="./assets/images/play_with_mum.jpg"
                     alt="a young mum and her daughter sorting through drinking cups" class="square-image play-by-pic">
@@ -158,14 +148,12 @@
             <div class="solid-orange solid-background">
                 <p>
                     Let’s have some messy fun!
-
                     Sensory play is an extremely hands-on activity, which lets kids engage with their senses through the
                     exploration of different materials and textures through play. So you will never be short of ideas!
                     There
                     are a wide range of sensory play activities, which allow you to create a fun and flexible learning
                     space
                     in your early years setting.
-
                     Here are some fantastic ideas and activities for sensory play.
                 </p>
             </div>
@@ -194,7 +182,6 @@
                     <p>
                         <em>Activity Two: Play Dough</em>
                         <br>
-
                         Cutting, squishing, rolling, and kneading. Soft Dough is perfect for stimulating sense of touch
                         –
                         toddlers will enjoy hours of soft dough fun!
@@ -204,7 +191,6 @@
                     <p>
                         <em>Activity Three: Kinetic Sand</em>
                         <br>
-
                         Mould, squeeze and build. Kinetic Sand flows through the fingers just like real sand – it’s that
                         squeezable sand that you just can’t put down!
                     </p>
@@ -213,7 +199,6 @@
                     <p>
                         <em>Activity Four: Shadow Puppets</em>
                         <br>
-
                         Create spectacular Shadow Puppets and let the little ones explore light and shade. Perfect for
                         storytelling!
                     </p>
@@ -222,7 +207,6 @@
                     <p>
                         <em>Activity Five: Water Play</em>
                         <br>
-
                         Pouring, scooping, splashing and bubbles! Water Play is an exciting sensory play activity, where
                         children become absorbed with the ripples of the water – try out a variety of water play games!
                     </p>
@@ -242,7 +226,6 @@
                     <p>
                         <em>Activity Seven: Couscous Dinosaur Hunt</em>
                         <br>
-
                         Fill a large Tub with couscous and bury toy Dinosaurs inside it. Then ‘hunt’ for your dinosaurs
                         using
                         brushes in an exciting Fossil Hunt.
@@ -252,7 +235,6 @@
                     <p>
                         <em>Activity Eight: Make Pretend Snow</em>
                         <br>
-
                         Feel the snow crunch between your fingers! Fake Snow is really easy to make with flour and oil –
                         simply
                         mix together 8 cups of cornflour and 1 cup of vegetable oil.
@@ -262,7 +244,6 @@
                     <p>
                         <em>Activity Nine: Homemade Paint Bags</em>
                         <br>
-
                         Fill zip lock bags with various coloured Paints and let the children enjoy squishing them and
                         mixing
                         the
@@ -273,7 +254,6 @@
                     <p>
                         <em>Activity Ten: Mud Pies</em>
                         <br>
-
                         Rustle up some fabulous sludgy treats and enjoy the sensory experience (and mess) of sticky,
                         gloopy
                         and
@@ -296,13 +276,11 @@
                     childhood as children are still developing emotion regulation. Most of the time, these big emotions
                     will
                     come and go and kids bounce back happy to go on with their day.
-
                     But what about when the bad mood seems to stick, when your child can’t seem to stop worrying, or
                     when
                     tantrums are frequent and intense? This can be an indication that your child is feeling some stress
                     or
                     underlying anxiety.
-
                     A great way to help kids with anxiety is to bolster up their sense of self so they can distance
                     themselves from their feelings. One of the best ways to help kids re-center when they are feeling
                     worried or upset to engage them in sensory play that, but it’s very nature is immersive and mindful.
@@ -354,7 +332,7 @@
                                 flow. Some research even shows that digging in dirt increases serotonin levels in the
                                 brain.</span></div>
                     </figcaption>
-                </figure class="grid-figure">
+                </figure>
                 <figure class="grid-figure"><img src="assets/images/glitter_jar.jpg"
                         alt="a jar of gold glitter spilling onto the floor" class="anxiety-activity">
                     <figcaption>
@@ -387,7 +365,6 @@
             <br>
             <p>Copyright@ClairePotter2021</p>
         </div>
-
         <ul>
             <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"
                         aria-hidden="true"></i></a></li>
@@ -396,17 +373,16 @@
             <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"
                         aria-hidden="true"></i></a></li>
         </ul>
-
     </footer>
+
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
 
     <!--javascript from W3 for sticky nav bar-->
-
     <script>
         window.onscroll = function () {
             myFunction()
-        };
+        }
 
         var header = document.getElementById("header");
         var sticky = header.offsetTop;
