--- a/index.html
+++ b/index.html
@@ -15,24 +15,22 @@
 
 <body>
     <header id="header">
-        <h1 id="logo"><a href="index.html" href="javascript:void(0)">Play Eternal <i class="fas fa-hand-holding-heart"
-                    aria-hidden="true"></i></a>
+        <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart" aria-hidden="true"></i></a>
         </h1>
         <nav id="menu">
             <ul>
-                <li><a href="index.html" href="javascript:void(0)" class="active">Home</a></li>
-                <li class="dropdown"><a href="about.html" href="javascript:void(0)" class="dropbtn">All About
+                <li><a href="javascript:void(0)" class="active">Home</a></li>
+                <li class="dropdown"><a href="about.html" class="dropbtn">All About
                         Sensory Play</a>
                     <div class="dropdown-content">
-                        <a href="about.html#sec1" href="javascript:void(0)">What is Sensory Play?</a>
-                        <a href="about.html#sec2" href="javascript:void(0)">Play in Motion</a>
-                        <a href="about.html#sec3" href="javascript:void(0)">Activities</a>
-                        <a href="about.html#sec4" href="javascript:void(0)">Help with Anxiety</a>
+                        <a href="about.html#sec1">What is Sensory Play?</a>
+                        <a href="about.html#sec2">Play in Motion</a>
+                        <a href="about.html#sec3">Activities</a>
+                        <a href="about.html#sec4">Help with Anxiety</a>
                     </div>
-
                 </li>
-                <li><a href="feedback.html" href="javascript:void(0)">Hear From Each Other</a></li>
-                <li><a href="contact.html" href="javascript:void(0)">Contact Us</a></li>
+                <li><a href="feedback.html">Hear From Each Other</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -54,9 +52,10 @@
                     <br>
                     <h3 class="text-area">What can I do as a parent?</h3>
                 </div>
+            </div>
+            <div id="learn-more"><a href="about.html">Learn More</a></div>
         </section>
     </div>
-    <button id="learn-more"><a href="about.html">Learn More</a></button>
     <footer>
         <div id="footer-logo">
             <a href="index.html"><i class="fas fa-hand-holding-heart"></i>
@@ -72,17 +71,16 @@
             </li>
             <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
         </ul>
-        </div>
     </footer>
+
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
 
     <!--javascript from W3 for sticky nav bar-->
-
     <script>
         window.onscroll = function () {
             myFunction()
-        };
+        }
 
         var header = document.getElementById("header");
         var sticky = header.offsetTop;
