Add remaining @media queries for about page.

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             </ul>
         </nav>
     </header>
-    <div id="content">
+    <div class="page-content">
         <section>
             <div id="about-menu">
                 <h2>All About Sensory Play</h2>
@@ -60,7 +60,7 @@
                     neurons in the brain to make connections, and help with development in all areas of learning.
                 </p>
             </div>
-            <h3 id="sight" class="senses_info">Sight <i class="far fa-eye" aria-hidden="true"></i> </h3>
+            <h3 id="sight" class="senses-info-right"> Sight <i class="far fa-eye" aria-hidden="true"></i> </h3>
             <div class="solid-blue solid-background">
                 <img src="./assets/images/play_by_sight.jpg"
                     alt="a young girl and her grandmother circling their eyes with their hands like glasses"
@@ -76,7 +76,7 @@
                     visual
                     memory as to how things work.</p>
             </div>
-            <h3 id="sound" class="senses_info">Sound <i class="fas fa-assistive-listening-systems" aria-hidden="true"></i></h3>
+            <h3 id="sound" class="senses-info-left">Sound <i class="fas fa-assistive-listening-systems" aria-hidden="true"></i></h3>
             <div class="solid-pink solid-background">
                 <img src="./assets/images/play_by_sound.jpg"
                     alt="a young girl holding up a home made tin and string phone to her ear"
@@ -92,7 +92,7 @@
                     learning
                     and development.</p>
             </div>
-            <h3 id="smell" class="senses_info">Smell <i class="fas fa-bacon" aria-hidden="true"></i></h3>
+            <h3 id="smell" class="senses-info-right">Smell <i class="fas fa-bacon" aria-hidden="true"></i></h3>
             <div class="solid-grey solid-background">
                 <img src="./assets/images/play_by_smell.jpg" alt="a young girl smelling a flower"
                     class="square-image play-by-pic">
@@ -104,7 +104,7 @@
                     between
                     new scents and build on their learning through their sense of smell.</p>
             </div>
-            <h3 id="touch" class="senses_info">Touch <i class="fas fa-hand-sparkles" aria-hidden="true"></i></h3>
+            <h3 id="touch" class="senses-info-left">Touch <i class="fas fa-hand-sparkles" aria-hidden="true"></i></h3>
             <div class="solid-green solid-background">
                 <img src="./assets/images/play_by_touch.jpg" alt="a young girl playing with a bead and metal toy"
                     class="square-image play-by-pic">
@@ -116,7 +116,7 @@
                     items
                     for texture such as rough and smooth, wet puddles, tree bark and some plants.</p>
             </div>
-            <h3 id="taste" class="senses_info">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
+            <h3 id="taste" class="senses-info-right">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
             <div class="solid-peach solid-background">
                 <img src="./assets/images/play_with_mum.jpg"
                     alt="a young mum and her daughter sorting through drinking cups" class="square-image play-by-pic">
