--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul>
         </nav>
     </header>
-    <div class="content">
+    <div class="page-content">
         <section>
             <div id="hero-area">
                 <div id="hero-text">
