Fix formatting across CSS stylesheet for consistency

--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <title>Play Eternal</title>
 </head>
-
 <body>
     <header id="header">
         <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart" aria-hidden="true"></i></a>
@@ -34,7 +33,6 @@
             </ul>
         </nav>
     </header>
-    <div class="page-content">
         <section>
             <div id="about-menu">
                 <h2>All About Sensory Play</h2>
@@ -116,7 +114,7 @@
                     items
                     for texture such as rough and smooth, wet puddles, tree bark and some plants.</p>
             </div>
-            <h3 id="taste" class="senses-info-right">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
+            <h3 id="taste" >Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
             <div class="solid-peach solid-background">
                 <img src="./assets/images/play_with_mum.jpg"
                     alt="a young mum and her daughter sorting through drinking cups" class="square-image play-by-pic">
@@ -356,7 +354,6 @@
                 </figure>
             </div>
         </section>
-    </div>
     <footer>
         <div id="footer-logo">
             <a href="index.html"><i class="fas fa-hand-holding-heart" aria-hidden="true"></i>
