--- a/contact.html
+++ b/contact.html
@@ -2,22 +2,33 @@
 <html lang="en">
 
 <head>
+    <!--Code Institute Template - meta included-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta Description-->
     <meta name="description"
         content="Play Eternal sensory play information and activities for parents of young children">
+    <!--Keywords-->
     <meta name="keywords"
         content="sensory play, childhood development, sensory play activities, sensory play for anxiety">
+    <!--Link to CSS stylesheet-->
     <link rel="stylesheet" href="assets/css/stylesheet.css">
+    <!--Page Title-->
     <title>Play Eternal</title>
 </head>
+
 <body>
+    <!--Header-->
     <header id="header">
         <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart" aria-hidden="true"></i></a>
         </h1>
+        <!--Navigation Menu-->
         <nav id="menu">
             <ul>
+                <!--Javascript and Dropdown from W3 school tutorial for sticky nav bar and dropdown menu - adjusted for this site
+                https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky
+                https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar-->
                 <li><a href="index.html">Home</a></li>
                 <li class="dropdown"><a href="about.html" class="dropbtn">All About
                         Sensory Play</a>
@@ -30,25 +41,26 @@
                 </li>
                 <li><a href="feedback.html" class="active">Hear From Each Other</a></li>
                 <li><a href="<body>
-    <header id="header">
-        <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart" aria-hidden="true"></i></a>
-        </h1>
-        <nav id="menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li class="dropdown"><a href="about.html" class="dropbtn">All About
-                        Sensory Play</a>
-                    <div class="dropdown-content">
-                        <a href="about.html#sec1">What is Sensory Play?</a>
-                        <a href="about.html#sec2">Play in Motion</a>
-                        <a href="about.html#sec3">Activities</a>
-                        <a href="about.html#sec4">Help with Anxiety</a>
-                    </div>
-                </li>
-                <li><a href="feedback.html">Hear From Each Other</a></li>
-                <li><a href="javascript:void(0)" class="active">Contact Us</a></li>
-            </ul>
-        </nav>
+    <header id=" header">
+                        <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart"
+                                    aria-hidden="true"></i></a>
+                        </h1>
+                        <nav id="menu">
+                            <ul>
+                                <li><a href="index.html">Home</a></li>
+                                <li class="dropdown"><a href="about.html" class="dropbtn">All About
+                                        Sensory Play</a>
+                                    <div class="dropdown-content">
+                                        <a href="about.html#sec1">What is Sensory Play?</a>
+                                        <a href="about.html#sec2">Play in Motion</a>
+                                        <a href="about.html#sec3">Activities</a>
+                                        <a href="about.html#sec4">Help with Anxiety</a>
+                                    </div>
+                                </li>
+                                <li><a href="feedback.html">Hear From Each Other</a></li>
+                                <li><a href="javascript:void(0)" class="active">Contact Us</a></li>
+                            </ul>
+                        </nav>
     </header>
     <div id="content">
         <section>
@@ -70,10 +82,11 @@
             <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
         </ul>
     </footer>
-    <!-- font awesome script-->
+    <!-- Font awesome script-->
     <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
 
-    <!--javascript from W3 for sticky nav bar-->
+    <!--Javascript from W3 schools tutorial for sticky nav bar
+    https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar-->
 
     <script>
         window.onscroll = function () {
