--- a/index.html
+++ b/index.html
@@ -2,23 +2,32 @@
 <html lang="en">
 
 <head>
+    <!--Code Institute Template - meta included-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta Description-->
     <meta name="description"
         content="Play Eternal sensory play information and activities for parents of young children">
+    <!--Keywords-->
     <meta name="keywords"
         content="sensory play, childhood development, sensory play activities, sensory play for anxiety">
+    <!--Link to CSS stylesheet-->
     <link rel="stylesheet" href="assets/css/stylesheet.css">
+    <!--Page Title-->
     <title>Play Eternal</title>
 </head>
-
 <body>
+     <!--Header-->
     <header id="header">
         <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart" aria-hidden="true"></i></a>
         </h1>
+        <!--Navigation Menu-->
         <nav id="menu">
             <ul>
+                <!--Javascript and Dropdown from W3 school tutorial for sticky nav bar and dropdown menu - adjusted for this site
+                https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky
+                https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar-->
                 <li><a href="javascript:void(0)" class="active">Home</a></li>
                 <li class="dropdown"><a href="about.html" class="dropbtn">All About
                         Sensory Play</a>
@@ -34,7 +43,9 @@
             </ul>
         </nav>
     </header>
+    <!--Home Page-->
         <section>
+            <!--Hero Image-->
             <div id="hero-area">
                 <div id="hero-text">
                     <h2 class="text-area">Help your child through play</h2>
@@ -54,6 +65,7 @@
             </div>
             <div id="learn-more"><a href="about.html">Learn More</a></div>
         </section>
+        <!--Footer-->
     <footer>
         <div id="footer-logo">
             <a href="index.html"><i class="fas fa-hand-holding-heart"></i>
@@ -71,10 +83,11 @@
         </ul>
     </footer>
 
-    <!-- font awesome script-->
+    <!-- Font awesome script-->
     <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
 
-    <!--javascript from W3 for sticky nav bar-->
+    <!--Javascript from W3 schools for sticky nav bar
+    https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky-->
     <script>
         window.onscroll = function () {
             myFunction()
@@ -92,5 +105,4 @@
         }
     </script>
 </body>
-
 </html>
