Add Hear From Each Other section and styling

--- a/contact.html
+++ b/contact.html
@@ -39,35 +39,19 @@
                         <a href="about.html#sec4">Help with Anxiety</a>
                     </div>
                 </li>
-                <li><a href="feedback.html" class="active">Hear From Each Other</a></li>
-                <li><a href="<body>
-    <header id=" header">
-                        <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart"
-                                    aria-hidden="true"></i></a>
-                        </h1>
-                        <nav id="menu">
-                            <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li class="dropdown"><a href="about.html" class="dropbtn">All About
-                                        Sensory Play</a>
-                                    <div class="dropdown-content">
-                                        <a href="about.html#sec1">What is Sensory Play?</a>
-                                        <a href="about.html#sec2">Play in Motion</a>
-                                        <a href="about.html#sec3">Activities</a>
-                                        <a href="about.html#sec4">Help with Anxiety</a>
-                                    </div>
-                                </li>
-                                <li><a href="feedback.html">Hear From Each Other</a></li>
-                                <li><a href="javascript:void(0)" class="active">Contact Us</a></li>
+                <li><a href="feedback.html">Hear From Each Other</a></li>
+                <li><a href="javascript:void(0)" class="active">Contact Us</a></li>
                             </ul>
                         </nav>
     </header>
-    <div id="content">
         <section>
+            <!--Contact Us section-->
+            <div id="contact-us-heading">
             <h2> Contact Us</h2>
+            </div>
         </section>
-    </div>
     <footer>
+        <!--Footer-->
         <div id="footer-logo">
             <a href="index.html"><i class="fas fa-hand-holding-heart"></i>
                 <h6>Play Eternal</h6>
