Add content div to improve scrolling

--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@
             </ul>
         </nav>
     </header>
+    <div class="content">
     <section>
         <!--About Page top of page and sub-menu to assist with page scrolling-->
         <div id="about-menu">
@@ -131,7 +132,7 @@
                 items
                 for texture such as rough and smooth, wet puddles, tree bark and some plants.</p>
         </div>
-        <h3 id="taste">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
+        <h3 id="taste" class="senses-info-right">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
         <div class="solid-peach solid-background">
             <img src="./assets/images/play_with_mum.jpg"
                 alt="a young mum and her daughter sorting through drinking cups" class="square-image play-by-pic">
@@ -383,6 +384,7 @@
             </figure>
         </div>
     </section>
+    </div>
     <footer>
         <!--Footer-->
         <div id="footer-logo">
