--- a/contact.html
+++ b/contact.html
@@ -44,12 +44,14 @@
                             </ul>
                         </nav>
     </header>
+    <div class="content">
         <section>
             <!--Contact Us section-->
             <div id="contact-us-heading">
             <h2> Contact Us</h2>
             </div>
         </section>
+    </div>
     <footer>
         <!--Footer-->
         <div id="footer-logo">
