--- a/feedback.html
+++ b/feedback.html
@@ -44,6 +44,7 @@
             </ul>
         </nav>
     </header>
+    <div class="content">
     <section>
         <!--Feedback Section-->
         <div id="feedback-heading">
@@ -138,6 +139,7 @@
             </div>
         </div>
     </section>
+    </div>
     <footer>
         <div id="footer-logo">
             <a href="index.html"><i class="fas fa-hand-holding-heart"></i>
