--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </nav>
     </header>
     <!--Home Page-->
+    <div class="content">
         <section>
             <!--Hero Image-->
             <div id="hero-area">
@@ -65,6 +66,7 @@
             </div>
             <div id="learn-more"><a href="about.html">Learn More</a></div>
         </section>
+        </div>
         <!--Footer-->
     <footer>
         <div id="footer-logo">
