--- a/contact.html
+++ b/contact.html
@@ -41,15 +41,49 @@
                 </li>
                 <li><a href="feedback.html">Hear From Each Other</a></li>
                 <li><a href="javascript:void(0)" class="active">Contact Us</a></li>
-                            </ul>
-                        </nav>
+            </ul>
+        </nav>
     </header>
     <div class="content">
         <section>
             <!--Contact Us section-->
             <div id="contact-us-heading">
-            <h2> Contact Us</h2>
-            </div>
+                <h2> Get In Touch</h2>
+                <h3>We would love to hear from you</h3>
+                <div id="contact-us-area">
+                    <div id="form-background">
+                        <form method="POST" action="https://formdump.codeinstitute.net/" class="contact-form">
+                            <label for:"name" class="form-labels"> Name: </label><input type="text" id="name" name="first-name" required
+                                class="form-input"><br>
+                            <label for: "surname" class="form-labels">Surname: </label><input type="text" id="surnname" name="last-name"
+                                required class="form-input"><br>
+                            <label for:"email" class="form-labels">Email Address: </label><input type="email" id="email"
+                                name="email-address" required class="form-input"><br>
+                            <label for:"ages-kids" class="form-labels">Child/Children's Age/s: </label><input type="text" id="ages-kids"
+                                name="ages-of-children" required class="form-input"><br>
+                            <label for:"feedback" class="form-labels">Feedback: </label><br>
+                            <input type="radio" id="feedback-choice-one" name="feedback-choice"
+                                value="The site met all of my needs"  class="radio-feedback" required><label for="feedback-choice-one" class="radio-feedback">The site
+                                met all of my needs</label>
+                            <input type="radio" id="feedback-choice-two" name="feedback-choice"
+                                value="The site met some of my needs" class="radio-feedback"><label for="feedback-choice-two" class="radio-feedback">The site met some
+                                of my needs</label>
+                            <input type="radio" id="feedback-choice-three" name="feedback-choice"
+                                value="The site met very few of my needs" class="radio-feedback"><label for="feedback-choice-three" class="radio-feedback">The site
+                                met very few of my needs</label><br>
+                            <label for:"feedback-page" class="form-labels">Feedback on our website: </label><textarea id="feedback-page"
+                                name="feedback-on-website" class="text-area-pane"
+                                form="contact-form">Please provide us with any feedback on our site...</textarea><br>
+                            <label for:"questions" class="form-labels">Questions: </label><textarea id="questions" name="questions"
+                                class="text-area-pane"
+                                form="contact-form">Please ask us any questions/enquiries you may have...</textarea><br>
+                            <label for:"recommendations-page" class="form-labels">Recommendations: </label><textarea
+                                id="recommendations-page" name="Recommendations" class="text-area-pane"
+                                form="contact-form">Let us know any personal Sensory Play recommendations you would like to make...</textarea><br>
+                            <input class="submit-info" type="submit" value="Submit">
+                        </form>
+                    </div>
+                </div>
         </section>
     </div>
     <footer>
